--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -23,10 +23,13 @@
 }
 
 .newsletter > input{
-    border-bottom: 2px solid black;
+
     width: 600px;
     padding-bottom: 1rem;
     text-align: center;
+    outline: none;
+    border: none;
+
 }
 
 .newsletter > input::placeholder{
@@ -48,10 +51,11 @@
     justify-content: center;
     gap: 1rem;
     font-size: 13px;
+    flex-wrap: wrap;
 }
 
 .contact_ways li:first-child{
-    color: aqua;
+    background-color: rgba(212, 243, 101, 0.648);
 }
 
 .contacto p{
