--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -22,6 +22,12 @@ header > .central_header{
     z-index: -200;
 }
 
+.central_header h2{
+        text-decoration: underline;
+        color: lightgray
+
+}
+
 header > .central_header > .link_path >ul{
     display: flex;
     gap: 1rem;
@@ -48,8 +54,10 @@ header > .central_header > .link_path li:first-child, header > .central_header >
 
 .actions_left{
     display: flex;
-    gap: 2rem;
+    flex-direction: column;
+    gap: 1rem;
     align-items: flex-end;
+    flex-wrap: wrap;
 }
 
 .upper_line{
@@ -132,19 +140,36 @@ header > .central_header > .link_path li:first-child, header > .central_header >
 
 
 .filterBar__filter{
-    position: absolute;
     display: none;
-    background-color: var(--primary-color);
+    position: absolute;
+    top:30px;
+    background-color: rgba(212, 243, 101, 0.979);
     color: black;
-    padding: 0.5rem;
-    width: inherit;
-    z-index: 0;
+    padding: 1rem;
+
+    z-index: 300;
+    
+}
+.order {
+    position: relative;
+    width: 100%;
+
+}
+.order:hover .filterBar__filter{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    box-shadow:  5px 3px 17px -11px rgba(0,0,0,0.75);
+    width: 100%;
+    gap: 1rem;
+
+
 }
 
 .filterBar__filter::before{
     content: "";
     position: absolute;
-    background-color: var(--primary-color);
+    background-color: rgba(212, 243, 101, 0.979);
     transform: rotate(45deg);
     top: -8px;
     left: 30px;
@@ -152,21 +177,14 @@ header > .central_header > .link_path li:first-child, header > .central_header >
     height: 20px;
     z-index: -1;
 }
-.active{
-    display: block;
-    position: absolute;
-
-    box-shadow:  5px 3px 17px -11px rgba(0,0,0,0.75);
-}
 
 .filterBar__filter >li{
     display: flex;
-    justify-content: space-between;
 }
 
 input[type=checkbox] {
     transform: scale(1.5);
-    padding: 1rem;
+
 }
 
 .texto{
@@ -176,7 +194,8 @@ height: 30px;
 
 @media screen and (max-width: 1050px){
 .actions_left{
-    gap: 1rem;
+    gap: 0.5rem;
+    justify-content: center;
 
 }
 
@@ -190,7 +209,7 @@ height: 30px;
         top:200px;
     }
     .upper_line input{
-        width: 80%;
+        width: 100%;
     }
     .user_actions{
         position: relative;
@@ -206,6 +225,12 @@ height: 30px;
     .second_line{
     
     font-size: 12px;}
+    .order{
+    width: 80%;
+margin: 0 auto;}
+    .actions_left{
+        flex-direction: row;
+    }
     }
 
 
