--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,3 +1,9 @@
+.carrito{
+    background-color: rgba(212, 243, 101, 0.648);
+    border-radius: 50px;
+    border: 1px solid black;
+    padding: 0.5rem 1rem;
+    width: 80vw;}
 
 .pointer{
     cursor: pointer;
@@ -13,12 +19,17 @@
     padding-bottom: 16px;
     padding-top: 16px;
     border-radius: 9px;
-    background: #d5f365;
+    background: rgba(212, 243, 101, 0.648);
     border: none;
     font-family: inherit;
     text-align: center;
     cursor: pointer;
     transition: 0.4s;
+            border-radius: 50px;
+        border: 1px solid black;
+        padding: 0.5rem 1rem;
+
+     
    }
    
    #bottone1:hover {
