--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -33,6 +33,8 @@
 
 .cartDone h2{
     background-color: rgba(212, 243, 101, 0.648);
+    font-family: "Arial";
+    font-weight: 300;
 
 }
 .cart_qty{
