--- a/src/components/CartLineItem.css
+++ b/src/components/CartLineItem.css
@@ -3,10 +3,12 @@
     grid-template-columns: 4fr 3fr 1fr 1fr 1fr 1fr;
     gap: 0.5rem;
     margin-bottom: 0.5em;
+
 }
 
 .item_img {
     min-width: 68px;
+
 }
 
 .item_select {
@@ -21,3 +23,7 @@
 .bold{
     font-weight:900;
 }
+
+@media screen and (max-width: 800px){
+.cartInfo_item {
+padding: 1rem;}}
