--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,9 +1,10 @@
 .carrito{
+    display: flex;
     background-color: rgba(212, 243, 101, 0.648);
     border-radius: 50px;
     border: 1px solid black;
     padding: 0.5rem 1rem;
-    width: 80vw;}
+;}
 
 .pointer{
     cursor: pointer;
